--- a/OPChat - Design/OPChat - Design.csproj
+++ b/OPChat - Design/OPChat - Design.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -136,6 +137,18 @@
     <Compile Include="FriendRequest.Designer.cs">
       <DependentUpon>FriendRequest.cs</DependentUpon>
     </Compile>
+    <Compile Include="imageMsg.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="imageMsg.Designer.cs">
+      <DependentUpon>imageMsg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="msgMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="msgMenu.Designer.cs">
+      <DependentUpon>msgMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="screen.cs">
@@ -176,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FriendRequest.resx">
       <DependentUpon>FriendRequest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="msgMenu.resx">
+      <DependentUpon>msgMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
